--- a/linguistic_analysis/nlg_analysis/Comparison with NLG.ipynb
+++ b/linguistic_analysis/nlg_analysis/Comparison with NLG.ipynb
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -2070,7 +2070,7 @@
     "vec_file = 'data/azg.vec'\n",
     "vectors = create_vectors(sig_file)\n",
     "create_file(vec_file, vectors) \n",
-    "!python3 Lines2Vectors.py <'data/azg.vec' -V | python3 Vectors2Grids.py -V > 'data/azg.grid' --pretty-print 'data/pretty_azg.grid'"
+    "!python3 Lines2Vectors.py <'data/azg.vec' -V | python3 Vectors2Grids.py -V > 'data/azg.grid'# --pretty-print 'data/pretty_azg.grid'"
    ]
   },
   {
